--- a/stm32/Makefile
+++ b/stm32/Makefile
@@ -154,9 +154,8 @@ ASFLAGS = $(MCU) $(AS_DEFS) $(AS_INCLUDES) $(OPT) -Wall -fdata-sections -ffuncti
 CFLAGS += $(MCU) $(C_DEFS) $(C_INCLUDES) $(OPT) -Wall -fdata-sections -ffunction-sections
 
 TARGET_TRIPLE = arm-none-eabi
-GCC_ARM_PATH = /opt/gcc-arm-none-eabi-10.3-2021.10
 LLVM_FLAGS = -O2 -emit-llvm -S --target=$(TARGET_TRIPLE) $(MCU) $(C_DEFS) $(C_INCLUDES)
-LLVM_FLAGS += --sysroot=$(GCC_ARM_PATH)/arm-none-eabi --gcc-toolchain=$(GCC_ARM_PATH) -Wall -fdata-sections -ffunction-sections -fno-inline -fno-elide-constructors
+LLVM_FLAGS += --sysroot=$(GCC_ARM_PATH)/arm-none-eabi -Wall -fdata-sections -ffunction-sections -fno-inline -fno-elide-constructors
 
 ifeq ($(DEBUG), 1)
 CFLAGS += -g -gdwarf-2
@@ -230,7 +229,8 @@ $(BUILD_DIR)/system_stm32l5xx.ll  \
 $(BUILD_DIR)/main.ll 
 
 # default action: build all
-all: $(LL_FILE)# $(BUILD_DIR)/$(TARGET).elf $(BUILD_DIR)/$(TARGET).hex $(BUILD_DIR)/$(TARGET).bin
+all: $(LL_FILE)
+direct: $(BUILD_DIR)/$(TARGET).elf $(BUILD_DIR)/$(TARGET).hex $(BUILD_DIR)/$(TARGET).bin
 
 
 #######################################
