Update CMakeLists to apply tag passes, not MPU

--- a/llvm/CMakeLists.txt
+++ b/llvm/CMakeLists.txt
@@ -9,12 +9,11 @@ link_directories(${CMAKE_SYSROOT}/lib)
 
 
 add_library(TestPass MODULE TestPass.cpp)
-add_library(MPUPass MODULE mpupass.cpp)
-add_library(TagPass MODULE mpupass.cpp)
+add_library(TagPass MODULE Tagpass.cpp)
 
 # 필요한 라이브러리 연결
 target_link_libraries(TestPass PRIVATE c++ m LLVM)
-target_link_libraries(MPUPass PRIVATE c++ m LLVM)
+target_link_libraries(TagPass PRIVATE c++ m LLVM)
 
 # mpupass.h 헤더 파일 디렉터리 설정
-target_include_directories(MPUPass PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(TagPass PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
