--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,11 +50,10 @@ add_custom_target(firmware ALL
 add_custom_target(
     apply_pass
     DEPENDS firmware
-    COMMAND opt -load-pass-plugin=${CMAKE_BINARY_DIR}/llvm/libTestPass.so -load-pass-plugin=${CMAKE_BINARY_DIR}/llvm/libTagPass.so -passes="my-test-pass,stack-tag-pass,global-variable-tag-pass" -S -o ${CMAKE_BINARY_DIR}/application_output.ll  ${CMAKE_BINARY_DIR}/../stm32/build/application.ll 
-    COMMAND llvm-link -o output.ll ${CMAKE_BINARY_DIR}/../stm32/drivers.ll ${CMAKE_BINARY_DIR}/application_output.ll 
-
+    COMMAND opt -load-pass-plugin=${CMAKE_BINARY_DIR}/llvm/libTestPass.so -load-pass-plugin=${CMAKE_BINARY_DIR}/llvm/libTagPass.so -passes="my-test-pass,stack-tag-pass" -S -o ${CMAKE_BINARY_DIR}/application_stack_tag_output.ll ${CMAKE_BINARY_DIR}/../stm32/build/application.ll
+    COMMAND opt -load-pass-plugin=${CMAKE_BINARY_DIR}/llvm/libTagPass.so -passes="global-variable-tag-pass" -S -o ${CMAKE_BINARY_DIR}/application_output.ll ${CMAKE_BINARY_DIR}/application_stack_tag_output.ll
+    COMMAND llvm-link -o output.ll ${CMAKE_BINARY_DIR}/../stm32/drivers.ll ${CMAKE_BINARY_DIR}/application_output.ll
 )
-
 add_custom_target(
     build
     DEPENDS apply_pass
